<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wcu_purple_gold_gradient"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".SelectImageActivity">

    <TextView
        style="@style/Collegiate"
        android:id="@+id/text_choose_img_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="@dimen/title_text"
        android:gravity="center"
        android:textColor="@color/wcu_purple"
        android:text="@string/choose_img_title" />

    <Button
        style="@style/Collegiate_Solid"
        android:id="@+id/btn_cat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/catamount"
        android:textColor="@color/wcu_gold"
        android:textSize="@dimen/subtitle_text" />

    <Button
        style="@style/Collegiate_Solid"
        android:id="@+id/btn_tower"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/tower_btn"
        android:textColor="@color/wcu_gold"
        android:textSize="@dimen/subtitle_text" />

    <Button
        style="@style/Collegiate_Solid"
        android:id="@+id/btn_comp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/comp_btn"
        android:textColor="@color/wcu_gold"
        android:textSize="@dimen/subtitle_text" />

    <Button
        style="@style/Collegiate_Solid"
        android:id="@+id/btn_sci"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/sci_btn"
        android:textColor="@color/wcu_gold"
        android:textSize="@dimen/subtitle_text" />

    <Button
        style="@style/Collegiate_Solid"
        android:id="@+id/btn_year"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:onClick="buttonClicked"
        android:text="@string/year"
        android:textColor="@color/wcu_gold"
        android:textSize="@dimen/subtitle_text" />

</LinearLayout>