<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/wcu_purple"
tools:context=".OneCharacterActivity">

    <TextView
        style="@style/Collegiate"
        android:id="@+id/text_one_char_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="@dimen/title_text"
        android:text="@string/one_char_title" />

    <TextView
        android:id="@+id/text_one_char_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_one_char_title"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_text"
        android:text="@string/one_char_subtitle" />

    <TextView
        android:id="@+id/text_one_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/edit_one_char"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_text"
        android:text="@string/enter_char" />

    <EditText
        android:id="@+id/edit_one_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="text"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:maxLength="1"
        android:textAlignment="center"
        android:hint="@string/edit_enter_char"/>

    <Button
        style="@style/Collegiate"
        android:id="@+id/btn_go_single"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_one_char"
        android:onClick="goBtnClicked"
        android:text="@string/go"
        android:textSize="@dimen/subtitle_text" />

</RelativeLayout>