<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wcu_purple"
    tools:context=".TwoCharactersActivity">

    <TextView
        style="@style/Collegiate"
        android:id="@+id/text_one_char_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="@dimen/title_text"
        android:text="@string/two_char_title" />

    <TextView
        style="@style/Collegiate_Solid"
        android:id="@+id/text_one_char_subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text_one_char_title"
        android:textAlignment="center"
        android:textSize="@dimen/subtitle_text"
        android:text="@string/two_char_subtitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:weightSum="4" >

        <TextView
            style="@style/Collegiate_Solid"
            android:id="@+id/text_first_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/subtitle_text"
            android:textColor="@color/wcu_gold"
            android:text="@string/first_char" />


        <EditText
            android:id="@+id/edit_first_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:maxLength="1"
            android:textAlignment="center"
            android:hint="@string/edit_enter_char"/>

        <TextView
            style="@style/Collegiate_Solid"
            android:id="@+id/text_sec_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@color/wcu_gold"
            android:textSize="@dimen/subtitle_text"
            android:text="@string/sec_char" />

        <EditText
            android:id="@+id/edit_sec_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:maxLength="1"
            android:textAlignment="center"
            android:hint="@string/edit_enter_char"/>

    </LinearLayout>

    <Button
        style="@style/Collegiate_Solid"
        android:id="@+id/btn_go_double"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/subtitle_text"
        android:onClick="goClicked"
        android:text="@string/go" />

</RelativeLayout>